--- a/index.html
+++ b/index.html
@@ -469,7 +469,8 @@
             </div>
       
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-          <div id="map">
+          <div id="">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3676.3298165071337!2d88.3993982!3d22.8642717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89132e9e28d91%3A0x270b56fff0fa509!2s6%2C%20Kankinara%2C%20Jagatdal%2C%20Kolkata%2C%20West%20Bengal%20743126!5e0!3m2!1sen!2sin!4v1684138054575!5m2!1sen!2sin" width="600" height="900" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
            </div>
           </div>
