--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
                           <li><a href="#">BULLET PROOF CAR</a></li>
                           <li><a href="#">METAL DETECTOR HAND MACHINE</a></li>
                           <li><a href="#">METAL DETECTOR DOOR MACHINE</a></li>
+                          
                           <li><a href="#">WALKY TALKY</a></li>
-                         
+                           <li><a href="#">CHEST CAMERA SECURITY</a></li>
                           <li><a href="#">CC TV & DRONE SERVICE</a></li>
                         </ul>
                       </li>
