--- a/gallery.html
+++ b/gallery.html
@@ -18,19 +18,19 @@
               <img src="imgGall/11.jpg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/2.jpg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic1.jpeg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/3.jpg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic2.jpeg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/4.jpg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic3.jpeg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/5.jpg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic4.jpeg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/6.jpg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic4.jpeg" class="gallery-item" alt="gallery">
            </div>
         </div>
      </div>
