--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,7 @@
               <img src="imgGall/11.jpg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/pic1.jpeg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic1.jpg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
               <img src="imgGall/pic2.jpeg" class="gallery-item" alt="gallery">
