--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,10 @@
               <img src="imgGall/11.jpg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/pic1.jpg" class="gallery-item" alt="gallery">
+               <video controls width="450" height="290">
+               <source src="imgGall/video.mp4" type="video/mp4">
+               Your browser does not support the video tag.
+             </video>
            </div>
            <div class="col">
               <img src="imgGall/pic2.jpeg" class="gallery-item" alt="gallery">
@@ -30,7 +33,7 @@
               <img src="imgGall/pic4.jpeg" class="gallery-item" alt="gallery">
            </div>
            <div class="col">
-              <img src="imgGall/pic4.jpeg" class="gallery-item" alt="gallery">
+              <img src="imgGall/pic1.jpg" class="gallery-item" alt="gallery">
            </div>
         </div>
      </div>
