--- a/index.html
+++ b/index.html
@@ -344,13 +344,13 @@
                                 <div class="row">
                                     <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 pa_right">
                                         <div class="testomonial_img">
-                                            <figure><img src="images/SRoy.jpeg" alt="#"/></figure>
+                                            <figure><img src="images/subhendu_.jpg" alt="#"/></figure>
                                             <i><img src="images/test_con.png" alt="#"/></i>
                                         </div>
                                     </div>
                                     <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 pa_left">
                                         <div class="cross_inner">
-              <h3>Shree Subhranshu Roy<br><strong class="ornage_color">Former Member of the Legislative Assembly of West Bengal </strong></h3>
+              <h3>Shree Suvendu Adhikari <br><strong class="ornage_color">Indian politician from the Bharatiya Janata Party </strong></h3>
               <p>I would like to express my utmost satisfaction with Diamond Suraksha.
                  Their professional and skilled bodyguards provided me with a sense of security
                   like no other. Their responsiveness, adaptability, and unwavering dedication
